--- a/Icecream-order-app/Icecream-order-app/templates/index.html
+++ b/Icecream-order-app/Icecream-order-app/templates/index.html
@@ -1,10 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Heladería - Abigail
-{% endblock %}
-
-{% block styles %}
+Heladería - Toma de Pedidos
 {% endblock %}
 
 {% block content %}
@@ -42,7 +39,6 @@ Heladería - Abigail
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"
     integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
     crossorigin="anonymous"></script>
-
 <script>
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js').catch(error => {
